Fixed bogus text in textarea.

--- a/cs-certificates.html
+++ b/cs-certificates.html
@@ -67,8 +67,7 @@
                     <label hidden>- or -</label>
                     <label for="data-paste">Copy then paste your data here from your spreadsheet program</label>
                     <textarea name="data-paste" id="data-paste" cols=100 rows=10 wrap="soft" 
-                              placeholder="First Name, Last Name, Item Name, SKU, Den Number, Date Earned, Pack Number, Cubmaster, Den Leader">
-                    </textarea>                
+                              placeholder="First Name, Last Name, Item Name, SKU, Den Number, Date Earned, Pack Number, Cubmaster, Den Leader"></textarea>                
                     <a href="assets/mockup_advancement.csv" download class="pure-button button-secondary">Download a sample file</a>
                     <a href='#result-html' id="data-input-submit" class="pure-button pure-button-primary">Go &gt;</a>
                 </fieldset>
