Cleaned up unused files. Changed browser compatibility text.

--- a/cs-certificates.html
+++ b/cs-certificates.html
@@ -53,8 +53,8 @@
                 <p><strong>Note:</strong> Since this is an early-stage project, it
                 <u><em>WILL NOT</em></u> work in anything but the latest browsers. 
                 <a href="https://www.google.com/intl/en/chrome/browser/desktop/index.html">Google Chrome</a>
-                is my development browser, so things should work the best there. Mozilla Firefox is
-                a close second.
+                is my development browser, so things should work the best there. IE11 is also pretty good. Firefox
+                squashes the award images.
                 </p>
                 <p>Good luck, and I hope this helps you!
                 </p>
